GPII-947: Creating live regions for supporting dynamic content like username availability, password stregth.

--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -10,7 +10,7 @@
                 <div class="gpii-signup-username-header">
                     <h2 class="gpii-signup-login-h2-normal"><label for="username" class="gpiic-signup-login-usernameLabel gpii-signup-login-label"></label></h2>
                     <span class="gpiic-signup-login-usernameAvailable gpii-signup-adjusterIcons"></span>
-                    <span class="gpiic-signup-login-usernameDescription gpii-signup-username-description"></span>
+                    <span class="gpiic-signup-login-usernameDescription gpii-signup-username-description" role="region" aria-live="assertive"></span>
                 </div>
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
                 <input id="username" name="username" type="text" class="gpiic-signup-login-usernameTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
@@ -19,7 +19,7 @@
                 <div class="gpii-signup-passwd-header">
                     <h2 class="gpii-signup-login-h2-normal"><label for="passwd" class="gpiic-signup-login-passwordLabel gpii-signup-login-label"></label></h2>
                     <span class="gpiic-signup-login-passwdStrength gpii-signup-adjusterIcons"></span>
-                    <span class="gpiic-signup-login-passwdStrengthDescription gpii-signup-passwd-description"></span>
+                    <span class="gpiic-signup-login-passwdStrengthDescription gpii-signup-passwd-description" role="region" aria-live="assertive"></span>
                 </div>
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
                 <input id="passwd" name="password" type="password" class="gpiic-signup-login-passwdTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
@@ -28,7 +28,7 @@
                 <div class="gpii-signup-cpasswd-header">
                     <h2 class="gpii-signup-login-h2-normal"><label for="cpasswd" class="gpiic-signup-login-confirmPasswordLabel gpii-signup-login-label"></label></h2>
                     <span class="gpiic-signup-login-passwdMatch gpii-signup-adjusterIcons"></span>
-                    <span class="gpiic-signup-login-passwdMatchDescription gpii-signup-passwd-description"></span>
+                    <span class="gpiic-signup-login-passwdMatchDescription gpii-signup-passwd-description" role="region" aria-live="assertive"></span>
                 </div>
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
                 <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
