GPII-1014: Replaced the slider used for adjusting the cursor size with the text field stepper.

--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -1,4 +1,4 @@
-<h3 class="gpiic-increaseSize-cursor-size-label gpii-increaseSize-label"></h3>
+<h3 class="gpiic-cursorSize-label gpii-increaseSize-label"></h3>
 
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer" aria-hidden="true">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
@@ -6,11 +6,9 @@
     <iframe tabindex="-1" class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
 </div>
 
-<div class="gpiic-increaseSize-cursor-size-slider">
-    <div class="gpii-increaseSize-cursor-size-slider-container">
-        <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconSmallCursor" role="img"></div>
-        <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-prefsEditor-slider gpii-prefsEditor-slider-horz"> </div>
-        <div class="gpii-prefsEditor-adjusterIcons gpii-increaseSize-iconBigCursor" role="img"></div>
-    </div>
-    <div class="fl-slider-input gpii-prefsEditor-slider-input"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /></div>
+<div class="gpiic-cursorSize-stepper gpii-stepper">
+    <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+    <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+    <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
+    <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
 </div>
