--- a/tests/common/html/gpiiSession-Test.html
+++ b/tests/common/html/gpiiSession-Test.html
@@ -4,19 +4,19 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>GPIISession tests</title>
 
-        <link rel="stylesheet" media="screen" href="../lib/qunit/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="../../lib/qunit/qunit/css/qunit.css" />
 
-        <script src="../lib/qunit/qunit/js/qunit.js"></script>
-        <script src="../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
-        <script src="../lib/qunit/mockjax/js/jquery.mockjax.js"></script>
-        <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
-        <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
+        <script src="../../lib/qunit/qunit/js/qunit.js"></script>
+        <script src="../../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
+        <script src="../../lib/qunit/mockjax/js/jquery.mockjax.js"></script>
+        <script src="../../lib/infusion/jqUnit/js/jqUnit.js"></script>
+        <script src="../../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
         <!-- Reusable test generation function: -->
         <script src="../js/testGenerator.js"></script>
 
         <!-- GPIISession specific files go here: -->
-        <script src="../../src/shared/common/GpiiSession.js"></script>
+        <script src="../../../src/shared/common/GpiiSession.js"></script>
         <!-- Test specific files go here: -->
         <script src="../js/gpiiSessionTests.js"></script>
     </head>
