--- a/tests/common/html/gpiiStore-Test.html
+++ b/tests/common/html/gpiiStore-Test.html
@@ -4,20 +4,20 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>GPIIStore tests</title>
 
-        <link rel="stylesheet" media="screen" href="../lib/qunit/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="../../lib/qunit/qunit/css/qunit.css" />
 
-        <script src="../lib/qunit/qunit/js/qunit.js"></script>
-        <script src="../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
-        <script src="../lib/qunit/mockjax/js/jquery.mockjax.js"></script>
-        <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
-        <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
+        <script src="../../lib/qunit/qunit/js/qunit.js"></script>
+        <script src="../../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
+        <script src="../../lib/qunit/mockjax/js/jquery.mockjax.js"></script>
+        <script src="../../lib/infusion/jqUnit/js/jqUnit.js"></script>
+        <script src="../../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
         <!-- Reusable test generation function: -->
         <script src="../js/testGenerator.js"></script>
 
         <!-- GPIIStore specific files go here: -->
-        <script src="../../src/shared/common/GpiiSession.js"></script>
-        <script src="../../src/shared/common/GpiiStore.js"></script>
+        <script src="../../../src/shared/common/GpiiSession.js"></script>
+        <script src="../../../src/shared/common/GpiiStore.js"></script>
         <!-- Test specific files go here: -->
         <script src="../js/gpiiStoreTests.js"></script>
     </head>
