GPII-1015: Adjustments to headers for PCP

--- a/src/shared/adjusters/html/increaseSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePCP.html
@@ -1,5 +1,6 @@
-<div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
-    <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></label>
+<div>
+    <span class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons" aria-hidden="true"></span>
+    <h1 class="gpii-prefsEditor-headerTitle-withoutIcon gpiic-headerTitle"></h1>
 </div>
 <div class="gpii-increaseSizePreferenceGroup gpii-prefsEditor-adjusterGroup">
 
