GPII-1014: Added the unit test for the cursor size enactor.

--- a/tests/all-tests.html
+++ b/tests/all-tests.html
@@ -20,7 +20,11 @@
     ]);
 
     QUnit.testSuites([
-        "./components/textfieldStepper/html/textfieldStepper-test.html"
+        "./components/textfieldStepper/html/textfieldStepper-Test.html"
+    ]);
+
+    QUnit.testSuites([
+        "./enactors/html/cursorSize-Test.html"
     ]);
     </script>
 </head>
