--- a/src/shared/adjusters/html/addContrastTemplate.html
+++ b/src/shared/adjusters/html/addContrastTemplate.html
@@ -1,5 +1,5 @@
 <section class="gpiic-contrast-section">
-    <div>
+    <div class="gpii-prefsEditor-headerContainer">
         <span class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons" aria-hidden="true"></span>
         <h1 class="gpii-prefsEditor-headerTitle-withoutIcon gpiic-headerTitle"></h1>
     </div>
