--- a/src/shared/adjusters/html/increaseSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePCP.html
@@ -1,4 +1,4 @@
-<div>
+<div class="gpii-prefsEditor-headerContainer">
     <span class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons" aria-hidden="true"></span>
     <h1 class="gpii-prefsEditor-headerTitle-withoutIcon gpiic-headerTitle"></h1>
 </div>
