GPII-1015: Removed unused class

--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -101,7 +101,7 @@
 <body>
 
     <!-- This is the div that will contain the UI Options component -->
-    <div id="gpiic-pcp" class="gpii-pcp">
+    <div id="gpiic-pcp">
     </div>
 
     <script>
