GPII-1014: removed old FSS class

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -1,4 +1,4 @@
-<div id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
+<div id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-panelContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <a href="#" class="gpii-prefsEditor-link gpii-prefsEditor-fullEditor gpiic-prefsEditor-fullEditorLink"></a>
         <a href="#" class="gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink flc-prefsEditor-reset"></a>
