GPII-1014: Some adjustments for unit tests.

--- a/tests/adjusters/html/cursorSizePCP-Test.html
+++ b/tests/adjusters/html/cursorSizePCP-Test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Cursor size enactor tests</title>
+        <title>PCP cursor size tests</title>
 
         <link rel="stylesheet" media="screen" href="../../lib/infusion/lib/qunit/css/qunit.css" />
 
@@ -21,7 +21,7 @@
     </head>
 
     <body id="body">
-        <h1 id="qunit-header">PCP Cursor size panel tests</h1>
+        <h1 id="qunit-header">PCP cursor size panel tests</h1>
         <h2 id="qunit-banner"></h2>
         <div id="qunit-testrunner-toolbar"></div>
         <h2 id="qunit-userAgent"></h2>
