--- a/tests/enactors/html/cursorSize-Test.html
+++ b/tests/enactors/html/cursorSize-Test.html
@@ -25,8 +25,8 @@
         <ol id="qunit-tests"></ol>
 
         <!-- Test HTML -->
-        <div class="gpiic-cursorSize">
-            <div class="gpiic-increaseSize-previewPerSettingCursorDiv" style="font-size: 2em"></div>
+        <div class="gpiic-cursorSize" style="font-size: 16px">
+            <div class="gpiic-increaseSize-previewPerSettingCursorDiv"></div>
         </div>
     </body>
 </html>
