GPII-1014: A couple of styling tweaks.

--- a/demos/explorationTool/index.html
+++ b/demos/explorationTool/index.html
@@ -90,7 +90,7 @@
             <div id="main">
                 <div id="article-filters" class="flc-explorationTool-simplify-hide fl-clearfix">
                     <div id="article-filter">
-                        <span class="fl-font-size-130">Read</span><br>
+                        <span>Read</span><br>
                         Basic
                     </div>
                     <div class="article-tab">
