GPII-1018: Show and hide context panel.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="gpii-prefsEditor-contextContainer">
+    <div class="gpiic-prefsEditor-contextContainer gpii-prefsEditor-contextContainer">
         <span>...</span>
     </div>
 </form>
