GPII-1018: Implementation of PMT's left frame. We have implemented the left frame (base set) and panel bottom row.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -18,12 +18,15 @@
             <div class="gpiic-languageGroup gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup gpii-prefsEditor-margin-bottom"></div>
+            <div class="gpii-prefsEditor-baseSetRow">
+                <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-baseSetLabel"></span>
+            </div>
         </div>
     </div>
     <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
         <div class="gpii-prefsEditor-panelBottomLeft gpii-prefsEditor-padding-left">
             <div class="gpii-prefsEditor-panelBottomLink">
-                <label for="setsButton" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-icon"></label>
+                <label for="setsButton" class="gpiic-prefsEditor-context-icon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-icon-left"></label>
                 <input id="setsButton" class="gpiic-prefsEditor-sets-button gpii-prefsEditor-trasparentButton" type="button" value="" />
             </div>
             <div class="gpii-prefsEditor-panelBottomLink">
@@ -33,8 +36,6 @@
         </div>
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpii-pmt-saveButtonContainer gpii-prefsEditor-padding-right">
-            <!-- <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel">
-            </label> -->
             <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save-adjusters" type="button" value="" />
             <input id="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-reset" type="button" value="" />
         </span>
@@ -50,6 +51,13 @@
         </div>
     </div>
     <div class="gpiic-prefsEditor-contextContainer gpii-prefsEditor-contextContainer">
-        <span>...</span>
+        <div class="gpiic-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header-stylingDark">
+            <a href="#" class="gpiic-prefsEditor-contextFrameLink"><span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span></a>
+        </div>
+        <div class="gpii-prefsEditor-contextFrame-row">
+            <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-contextFrame-setLabel"></span>
+            <span class="gpiic-prefsEditor-baseSetDescription gpii-prefsEditor-contextFrame-setLabelDescription"></span>
+            <span class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-leftArrowIcon">
+        </div>
     </div>
 </form>
