GPII-1018: Implementation of PMT's left frame. Implementation of base set box. Implementation of untitled box. Implementation of "add set" functionality (creation of untitled box). Add aria support for "sets" and "account" buttons.

--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -20,8 +20,8 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/FullPrefsEditor.css" />
 
         <!-- Needed fonts from Google -->
-        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+        <!-- <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'> -->
 
         <!-- All styling for PMT is here -->
         <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/fss-theme-inverted-prefsEditor.css" />
@@ -29,9 +29,9 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
 
         <!-- This is breaking the slider color -->
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <!-- ><link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script> -->
         <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
 
         <!-- The Infusion Library -->
