--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -19,19 +19,19 @@
             <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
             <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup gpii-prefsEditor-margin-bottom"></div>
             <div class="gpii-prefsEditor-baseSetRow">
-                <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-baseSetLabel"></span>
+                <span class="gpiic-prefsEditor-setLabel gpii-prefsEditor-baseSetLabel"></span>
             </div>
         </div>
     </div>
     <div class="gpii-prefsEditor-panelBottomRow gpiic-pmt-bottomRow">
         <div class="gpii-prefsEditor-panelBottomLeft gpii-prefsEditor-padding-left">
             <div class="gpii-prefsEditor-panelBottomLink">
-                <label for="setsButton" class="gpiic-prefsEditor-context-icon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-icon-left"></label>
-                <input id="setsButton" class="gpiic-prefsEditor-sets-button gpii-prefsEditor-trasparentButton" type="button" value="" />
+                <label for="setsButton" class="gpiic-prefsEditor-context-icon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-icon-left" role="presentation"></label>
+                <input id="setsButton" class="gpiic-prefsEditor-sets-button gpii-prefsEditor-trasparentButton" type="button" value="" tabindex="0"/>
             </div>
             <div class="gpii-prefsEditor-panelBottomLink">
-                <label for="accountButton" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-signup-icon"></label>
-                <input id="accountButton" class="gpiic-prefsEditor-account-button gpii-prefsEditor-trasparentButton" type="button" value="" />
+                <label for="accountButton" class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-signup-icon" role="presentation"></label>
+                <input id="accountButton" class="gpiic-prefsEditor-account-button gpii-prefsEditor-trasparentButton" type="button" value="" tabindex="0"/>
             </div>
         </div>
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
@@ -54,10 +54,6 @@
         <div class="gpiic-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header gpii-prefsEditor-contextFrame-header-stylingDark">
             <a href="#" class="gpiic-prefsEditor-contextFrameLink"><span class="gpiic-prefsEditor-context-addIcon gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-addIcon"></span></a>
         </div>
-        <div class="gpii-prefsEditor-contextFrame-row">
-            <span class="gpiic-prefsEditor-baseSetLabel gpii-prefsEditor-contextFrame-setLabel"></span>
-            <span class="gpiic-prefsEditor-baseSetDescription gpii-prefsEditor-contextFrame-setLabelDescription"></span>
-            <span class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-context-leftArrowIcon">
-        </div>
+        <div class="gpiic-prefsEditor-contextFrame-rows"></div>
     </div>
 </form>
