GPII-1014: Use number input fields for the value field in the text field stepper.

--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -9,7 +9,7 @@
 
     <div class="gpiic-textSize-stepper gpii-stepper">
         <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
-        <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+        <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
         <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
     </div>
