--- a/src/shared/adjusters/html/magnifierTemplatePCP.html
+++ b/src/shared/adjusters/html/magnifierTemplatePCP.html
@@ -3,7 +3,7 @@
 
     <div class="gpiic-magnifier-stepper gpii-stepper">
         <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
-        <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+        <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
         <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
     </div>
