GPII-1023: Creation of auto adjust JSON files. Fixing identifier in autoAdjust HTML template.

--- a/src/shared/adjusters/html/autoAdjustTemplate.html
+++ b/src/shared/adjusters/html/autoAdjustTemplate.html
@@ -2,11 +2,7 @@
     <h2 class="gpii-prefsEditor-firstHeading ">
         <label for="onOffSwitchInputAutoAdjust" class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label>
     </h2>
-    <div id="gpii-onOffSwitch-onOff" class="fl-prefsEditor-onoff">
-        <!--
-            TODO: This ID needs to be set differently because having two instances of the onOffSwitch adjuster
-            within the same composite panel creates an inconsistency on which element the labels' "for" attribute refer to 
-        -->
+    <div class="fl-prefsEditor-onoff gpii-onOffSwitch-onOff">
         <input type="checkbox" id="onOffSwitchInputAutoAdjust" class="gpiic-onOffSwitch-input"/>
         <label for="onOffSwitchInputAutoAdjust">
             <span class="fl-prefsEditor-switch gpiic-prefsEditor-onOffSwitch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
