GPII-1014: Use <button> for increase and decrease buttons in text field steppers.

--- a/src/shared/adjusters/html/cursorSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePCP.html
@@ -2,8 +2,8 @@
 <h4 class="gpiic-cursorSize-label"></h4>
 
 <div class="gpiic-cursorSize-stepper gpii-stepper">
-    <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+    <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
     <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
     <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-    <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+    <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
 </div>
