--- a/src/shared/adjusters/html/textSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/textSizeTemplatePMT.html
@@ -8,9 +8,9 @@
     </div>
 
     <div class="gpiic-textSize-stepper gpii-stepper">
-        <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+        <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
         <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-        <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+        <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
     </div>
 </div>
