--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -2,9 +2,9 @@
     <div class="gpiic-voicePitch">
         <h3><label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label></h3>
         <div class="gpiic-speakText-voicePitch-stepper gpii-stepper">
-            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
             <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+            <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
         </div>
     </div><br>
 </div>
