--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -7,8 +7,8 @@
 </div>
 
 <div class="gpiic-cursorSize-stepper gpii-stepper">
-    <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+    <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
     <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
     <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-    <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+    <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
 </div>
