--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -3,9 +3,9 @@
         <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label></h2>
         <div class="gpiic-universalVolume-description gpii-description"></div>
         <div class="gpiic-speakText-universalVolume-stepper gpii-stepper">
-            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
             <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
+            <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
         </div>
     </div><br>
 </div>
