GPII-1014: Use a common template for gpii.textfieldStepper instead of having the same markup embedded in each individual adjuster template.

--- a/src/shared/adjusters/html/cursorSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePCP.html
@@ -1,9 +1,4 @@
 <div class="gpii-spacing-ensurer"></div>
 <h4 class="gpiic-cursorSize-label"></h4>
 
-<div class="gpiic-cursorSize-stepper gpii-stepper">
-    <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
-    <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
-    <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-    <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
-</div>
+<div class="gpiic-cursorSize-stepper"></div>
