--- a/src/shared/adjusters/html/magnifierTemplatePMT.html
+++ b/src/shared/adjusters/html/magnifierTemplatePMT.html
@@ -6,10 +6,5 @@
         <iframe tabindex="-1" class="gpiic-magnifier-preview gpiic-adjuster-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
     </div>
 
-    <div class="gpiic-magnifier-stepper gpii-stepper">
-        <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
-        <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
-        <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-        <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
-    </div>
+    <div class="gpiic-magnifier-stepper"></div>
 </div>
