--- a/src/shared/adjusters/html/textSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/textSizeTemplatePCP.html
@@ -1,10 +1,5 @@
 <div class="gpii-prefsEditor-adjusterPanel">
     <h4 class="gpiic-textSize-label"></h4>
 
-    <div class="gpiic-textSize-stepper gpii-stepper">
-        <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
-        <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
-        <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-        <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
-    </div>
+    <div class="gpiic-textSize-stepper"></div>
 </div>
