--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,10 +1,6 @@
 <div>
     <div class="gpiic-voicePitch">
         <h3><label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label></h3>
-        <div class="gpiic-speakText-voicePitch-stepper gpii-stepper">
-            <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
-            <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
-        </div>
+        <div class="gpiic-speakText-voicePitch-stepper"></div>
     </div><br>
 </div>
