--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -6,9 +6,4 @@
     <iframe tabindex="-1" class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
 </div>
 
-<div class="gpiic-cursorSize-stepper gpii-stepper">
-    <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
-    <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
-    <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
-    <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
-</div>
+<div class="gpiic-cursorSize-stepper"></div>
