--- a/src/shared/adjusters/html/wordsSpokenPerMinute.html
+++ b/src/shared/adjusters/html/wordsSpokenPerMinute.html
@@ -1,10 +1,6 @@
 <div>
     <div class="gpiic-wordsSpokenPerMinute">
         <h3><label class="gpiic-speakText-wordsSpokenPerMinute-label gpii-speakText-label"></label></h3>
-        <div class="gpiic-speakText-wordsSpokenPerMinute-stepper gpii-stepper">
-            <button class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></button>
-            <input type="number" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
-            <button class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></button>
-        </div>
+        <div class="gpiic-speakText-wordsSpokenPerMinute-stepper"></div>
     </div>
 </div>
